(fix): Add Eclipse Che Install
WIP:
 - add image caching

--- a/roles/workshop/files/subscriptions/che/cr.yaml
+++ b/roles/workshop/files/subscriptions/che/cr.yaml
@@ -8,8 +8,8 @@ spec:
     cheImageTag: ''
     devfileRegistryImage: ''
     pluginRegistryImage: ''
-    tlsSupport: false
-    selfSignedCert: false
+    tlsSupport: true
+    selfSignedCert: true
   database:
     externalDb: false
     chePostgresHostname: ''
