--- a/roles/workshop/defaults/main.yml
+++ b/roles/workshop/defaults/main.yml
@@ -1,4 +1,11 @@
 ---
-# defaults file for workshop openshift/kubernetes
 platform: openshift
 state: present
+users:
+  prefix: user
+  from: 0
+  to: 50
+  password: 'openshfit'
+  admin_password: 'superS3cret'
+stacks:
+  che_version: 7.1.0
