--- a/roles/workshop/files/subscriptions/elastic_search/subscription.yaml
+++ b/roles/workshop/files/subscriptions/elastic_search/subscription.yaml
@@ -2,10 +2,10 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  name: servicemesh
+  name: elastic-search
   namespace: openshift-operators
 spec:
-  channel: "1.0"
+  channel: preview
   source: rhd-workshop-packages
-  name: servicemeshoperator 
+  name: elasticsearch-operator
   sourceNamespace: openshift-operators
