--- a/roles/workshop/files/subscriptions/jaeger/subscription.yaml
+++ b/roles/workshop/files/subscriptions/jaeger/subscription.yaml
@@ -2,10 +2,10 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  name: servicemesh
+  name: jaeger
   namespace: openshift-operators
 spec:
-  channel: "1.0"
+  channel: stable
   source: rhd-workshop-packages
-  name: servicemeshoperator 
+  name: jaeger-product
   sourceNamespace: openshift-operators
