--- a/roles/workshop/tasks/main.yml
+++ b/roles/workshop/tasks/main.yml
@@ -124,10 +124,18 @@
    state: present
    definition: "{{ lookup('template','catalog_sources.yaml.j2') }}"
 
-# - name: "Create Red Hat Catalog Sources"
-#   k8s:
-#    state: present
-#    definition: "{{ lookup('template','rh_catalog_sources.yaml.j2') }}"
+- name: "Create Red Hat Catalog Sources"
+  k8s:
+   state: present
+   definition: "{{ lookup('template','rh_catalog_sources.yaml.j2') }}"
 
-- name: "Install Eclipse Che" 
-  include_tasks: install_che.yaml
+# - name: "Install Eclipse Che" 
+#   include_tasks: install_che.yaml
+
+- name: "Get Stacks"
+  set_fact:
+    stack_names: "{{ (stacks|json_query('community[*].name')) | union((stacks|json_query('redhat[*].name'))) }}" 
+
+- name: "Install Servicemesh" 
+  include_tasks: install_servicemesh.yaml
+  when: "'servicemesh' in stack_names"
