(fix): add all stack install
- added all workshop software stack installable via CR
- added flag to skip or install stack
- added force to users creation to allow updates

--- a/roles/workshop/files/subscriptions/knative_serving/subscription.yaml
+++ b/roles/workshop/files/subscriptions/knative_serving/subscription.yaml
@@ -6,6 +6,6 @@ metadata:
   namespace: openshift-operators
 spec:
   channel: alpha
-  source: rhd-workshop-packages
+  source: rhd-workshop-packages-community
   name: knative-serving-operator
   sourceNamespace: openshift-operators
