--- a/roles/workshop/files/subscriptions/knative_eventing/subscription.yaml
+++ b/roles/workshop/files/subscriptions/knative_eventing/subscription.yaml
@@ -6,6 +6,6 @@ metadata:
   namespace: openshift-operators
 spec:
   channel: alpha
-  source: rhd-workshop-packages
+  source: rhd-workshop-packages-community
   name: knative-eventing-operator
   sourceNamespace: openshift-operators
