--- a/roles/workshop/files/subscriptions/pipelines/subscription.yaml
+++ b/roles/workshop/files/subscriptions/pipelines/subscription.yaml
@@ -6,6 +6,6 @@ metadata:
   namespace: openshift-operators
 spec:
   channel: dev-preview
-  source: rhd-workshop-packages
+  source: rhd-workshop-packages-community
   name: openshift-pipelines-operator
   sourceNamespace: openshift-operators
