(chore) add groups and update roles
-added workshop-students group
-updated the role, rb to add operator SA to cluster-admin

--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -3,6 +3,7 @@ kind: Role
 metadata:
   creationTimestamp: null
   name: rhd-workshop-operator
+  namespace: rhd-workshop-infra
 rules:
 - apiGroups:
   - ""
