--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: rhd-workshop-operator
+  namespace: rhd-workshop-infra
 spec:
   replicas: 1
   selector:
