--- a/deploy/role_binding.yaml
+++ b/deploy/role_binding.yaml
@@ -1,10 +1,25 @@
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: rhd-workshop-operator-cluster-admin
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: cluster-admin
+subjects:
+- kind: ServiceAccount
+  name: rhd-workshop-operator
+  namespace: rhd-workshop-infra
+---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: rhd-workshop-operator
+  namespace: rhd-workshop-infra
 subjects:
 - kind: ServiceAccount
   name: rhd-workshop-operator
+  namespace: rhd-workshop-infra
 roleRef:
   kind: Role
   name: rhd-workshop-operator
