(chore) add che users and link
- enable che keycloak idp link
- create che users
- add image cachier

--- a/roles/workshop/files/subscriptions/che/cr.yaml
+++ b/roles/workshop/files/subscriptions/che/cr.yaml
@@ -9,7 +9,7 @@ spec:
     devfileRegistryImage: ''
     pluginRegistryImage: ''
     tlsSupport: true
-    selfSignedCert: true
+    selfSignedCert: false
   database:
     externalDb: false
     chePostgresHostname: ''
