--- a/roles/workshop/defaults/main.yml
+++ b/roles/workshop/defaults/main.yml
@@ -1,5 +1,7 @@
 ---
+enable_che_keycloak_token_exchange: true
 platform: openshift
+openshift_api_server: "oauth-openshift.openshift-authentication:6443"
 state: present
 users:
   prefix: user
